--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+csv = "1.1"
+serde = { version = "1", features = ["derive"] }
 
 [dependencies.pyo3]
 version = "0.22.2"
